--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ map.on('load', function() {
 	// change info window on hover
 	map.on('mousemove', function(e) {
 		var states = map.queryRenderedFeatures(e.point, {
-			layers: [‘state data’]
+			layers: ['statedata-2-4kd50c']
 		});
 
 		if (states.length > 0) {
