--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ for (i=0; i<layers.length; i++) {
 	// change info window on hover
 	map.on('mousemove', function (e) {
           var states = map.queryRenderedFeatures(e.point, {
-            layers: ['statedata-2-4kd50c']
+            layers: ['stateData-bnb4sh']
         });
 
 		if (states.length > 0) {
